--- a/L1/index.html
+++ b/L1/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>一个Web</title>
 </head>
 <body>
-<IMG src="彭于晏.jpg"/>
+<IMG src="./images/彭于晏.jpg"/>
 <h1>老乡站</h1>
 <p>第一点</p>
 </body>
