--- a/L1/index.html
+++ b/L1/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>一个Web</title>
+    <style type="text/css">
+        body{
+            background-image: url(./images/彭于晏.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<IMG src="./images/彭于晏.jpg"/>
+
 <h1>老乡站</h1>
 <p>第一点</p>
 </body>
