--- a/L1/index.html
+++ b/L1/index.html
@@ -12,6 +12,15 @@
         html{
             height: 100%;
         }
+        @keyframes myfirst {
+            from {opacity: 0}
+            to {opacity: 100}
+            /*from {background: antiquewhite;}*/
+            /*to {background: crimson;}*/
+        }
+        h1{
+            animation: myfirst 2s infinite;
+        }
     </style>
 </head>
 <body>
